[gd_scene load_steps=2 format=2]

[ext_resource path="res://System Save/SystemSave.gd" type="Script" id=1]

[node name="SystemSave" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Save" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 159.0
margin_top = 150.0
margin_right = 347.0
margin_bottom = 191.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save"
flat = false
align = 1

[node name="Load" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 158.0
margin_top = 224.0
margin_right = 346.0
margin_bottom = 265.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load"
flat = false
align = 1

[node name="Love" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 606.0
margin_top = 83.0
margin_right = 794.0
margin_bottom = 124.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Love"
flat = false
align = 1

[node name="Family" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 603.0
margin_top = 149.0
margin_right = 791.0
margin_bottom = 190.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Family"
flat = false
align = 1

[node name="Spirit" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 604.0
margin_top = 218.0
margin_right = 792.0
margin_bottom = 259.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Spirit"
flat = false
align = 1

[node name="Friendship" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 604.0
margin_top = 289.0
margin_right = 792.0
margin_bottom = 330.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Friendship"
flat = false
align = 1

[node name="Item1" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 907.0
margin_top = 137.0
margin_right = 1095.0
margin_bottom = 178.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Item1"
flat = false
align = 1

[node name="Item4" type="Button" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 905.0
margin_top = 200.0
margin_right = 1093.0
margin_bottom = 241.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Item4"
flat = false
align = 1

[connection signal="button_down" from="Save" to="." method="_on_Save_button_down"]

[connection signal="button_down" from="Load" to="." method="_on_Load_button_down"]

[connection signal="button_down" from="Love" to="." method="_on_Love_button_down"]

[connection signal="button_down" from="Family" to="." method="_on_Family_button_down"]

[connection signal="button_down" from="Spirit" to="." method="_on_Spirit_button_down"]

[connection signal="button_down" from="Friendship" to="." method="_on_Friendship_button_down"]

[connection signal="button_down" from="Item1" to="." method="_on_Item1_button_down"]

[connection signal="button_down" from="Item4" to="." method="_on_Item4_button_down"]


